WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165060
Fix various --minimal build issues
https://bugs.webkit.org/show_bug.cgi?id=165060
Summary
Fix various --minimal build issues
Csaba Osztrogonác
Reported
2016-11-24 05:42:32 PST
1.) isCustomIdentValue() is only used inside ENABLE(CSS_GRID_LAYOUT) guard, but defined unconditionally in Source/WebCore/css/parser/CSSPropertyParser.cpp, which caused build error if !ENABLE(CSS_GRID_LAYOUT) - unused but defined function. 2.) SecurityOriginData struct is used in Source/WebCore/loader/EmptyClients.cpp and Source/WebCore/dom/Document.cpp too, but SecurityOriginData.h isn't directly included. The normal full build works, because this header is included indirectly somewhere.
Attachments
Patch
(2.73 KB, patch)
2016-11-24 05:43 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-11-24 05:43:34 PST
Created
attachment 295405
[details]
Patch
WebKit Commit Bot
Comment 2
2016-11-27 10:17:08 PST
Comment on
attachment 295405
[details]
Patch Clearing flags on attachment: 295405 Committed
r208991
: <
http://trac.webkit.org/changeset/208991
>
WebKit Commit Bot
Comment 3
2016-11-27 10:17:11 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug