Fix various --minimal build issues https://bugs.webkit.org/show_bug.cgi?id=165060

Reviewed by Darin Adler.

* css/parser/CSSPropertyParser.cpp:
* dom/Document.cpp:
* loader/EmptyClients.cpp:


Canonical link: https://commits.webkit.org/182699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208991 268f45cc-cd09-0410-ab3c-d52691b4dbfc